# discord-custom-commands

./: .env.example  .gitignore  Cargo.toml  README.md
assets/: locale.json
src/: helpers.rs  main.rs
src/commands/: custom_commands.rs  math.rs  meta.rs  misc.rs  mod.rs
src/sqlite/: mod.rs
